Adding styling to the pics page

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,14 +1,24 @@
-<h2>
+
     
     <% @pics.each do |pic| %>
-       <div>
-         Lesson: <%= pic.lesson %>
-         <br/>
-         Emotion: <%= pic.emotion %>
-         <br/>
-         Learned: <%= pic.learned %>
+       <div class="stolen-frosty span 4 text-center">
+         
+          <h1 class="stolen-h1">
+            Lesson: <%= pic.lesson %>
+          </h1>
+           
+           <br/>
+          <h2> 
+           Emotion: <%= pic.emotion %>
+          </h2>
+
+           <br/>
+          
+          <h2> 
+           Learned: <%= pic.learned %>
+          </h2>
+
      </div>
     <% end %>
 
 
-</h2>
