Styling new page form

--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,13 +1,22 @@
-<h2>
+<div class = "stolen-frosty span4 offset5 text-center">
+    
+    <h1 class= "stolen-h1">
+      Save Your Lesson
+    </h1>
 
-  <%= simple_form_for @pic do |f| %>
+    <br/>
 
-      <%= f.input :lesson %>
-      <%= f.input :emotion %>
-      <%= f.input :learned %>
+      <%= simple_form_for @pic do |f| %>
+      
+          <%= f.input :lesson %>
+          <br/>
+          <%= f.input :emotion, label: 'How did you feel?', placeholder: 'Stoked, Jazzed, Super' %>
+          <br/>
+          <%= f.input :learned, label: 'What did you learn?', placeholder: 'HTML, CSS, Rails, GitHub, Ruby' %>
+          <br/>
+          <%= submit_tag  'Save', :class => 'btn btn-success btn-large' %>
+      
+      <% end %>
 
-      <%= submit_tag  'Save' %>
-
-  <% end %>
-
-</h2>
+    
+</div>
