--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -34,3 +34,10 @@ h2 {
   font-size: 36px;
   color:  white;
 }
+
+label {
+  font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  color:  white;
+}
