Hook up image uploading with carrierwave

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -9,6 +9,8 @@
            
           <br/>
 
+          <%= image_tag pic.image %>
+
           <h2> 
            Emotion: <%= pic.emotion %>
           </h2>
