--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -10,6 +10,10 @@
       
           <%= f.input :lesson %>
           <br/>
+
+          <%= f.input :image, label: 'Upload your image:' %>
+          <br/>
+
           <%= f.input :emotion, label: 'How did you feel?', placeholder: 'Stoked, Jazzed, Super' %>
           <br/>
           <%= f.input :learned, label: 'What did you learn?', placeholder: 'HTML, CSS, Rails, GitHub, Ruby' %>
