--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,6 +11,6 @@
     <br/>
     <br/>
 
-    <%= link_to 'Launch', '#', :class => 'btn btn-warning btn-large' %>
+    <%= link_to 'Launch', pics_path, :class => 'btn btn-warning btn-large' %>
 
 </div>
