--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -41,3 +41,10 @@ label {
   font-size: 20px;
   color:  white;
 }
+
+.error {
+  font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
+  font-weight: 600;
+  color: red;
+  display: block;
+}
