Created edit feature

--- a/app/views/pics/show.html.erb
+++ b/app/views/pics/show.html.erb
@@ -17,4 +17,6 @@
 
   <%= link_to 'Delete', pic_path(@pic), :method => :delete, :class => 'btn btn-danger btn-large', :confirm => 'You sure you want to delete this?' %>
 
+  <%= link_to 'Edit', edit_pic_path(@pic), :class => 'btn btn-large' %>
+
 </div>
