--- a/app/views/pics/edit.html.erb
+++ b/app/views/pics/edit.html.erb
@@ -1,9 +1,9 @@
 <div class = "stolen-frosty span4 offset5 text-center">
     
     <h1 class= "stolen-h1">
-      Save Your Lesson
+      Edit Your Lesson
     </h1>
 
-    <%= render :partial => 'form' %>
+      <%= render :partial => 'form' %>
 
 </div>
